[package]
name = "group-query"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
prost-build = "0.11.9"

[dependencies]
bytes = "1.4.0"
prost = "0.11.9"
tokio = { version = "1.28.0", features = ["rt", "net", "rt-multi-thread", "macros"] }
anyhow = "1.0.71"
lazy_static = "1.4.0"
config = { version = "0.13.4" }
serde_derive = "1.0.193"
serde = "1.0.193"
rand = "0.8.5"
